# namelist-parser

./: .gitignore  namelist-parser.cabal  stack.yaml
Examples/HVAC/: fan_test.fds
bench/: BenchBig.hs  BenchSmall.hs
src/: Test.hs  Tests.hs
src/Text/: Namelist.hs
src/Text/Namelist/: Raw.hs  Types.hs
src/Text/Namelist/Raw/: Types.hs
test/: FDSSpec.hs  Test.hs  TestB.fds
