name: namelist-parser
version: 0.2.2
cabal-version: >=1.8
build-type: Simple
license: MPL-2.0
synopsis: Parses Fortran Namelist files.
description: A parsec library for parsing Fortran Namelist files.

library
    build-depends: base
        , array
        , attoparsec
        , parsec
        , vector
        , containers
        , text
    exposed-modules: Text.Namelist
                   , Text.Namelist.Types
    exposed: True
    buildable: True
    hs-source-dirs: src

test-suite tests
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Test.hs
  other-modules: FDSSpec
  build-depends:       base
    , array
    , namelist-parser
    , containers
    , attoparsec
    , filepath
    , Glob
    , parsec
    , vector
    , HUnit
    , QuickCheck
    , text
    , test-framework
    , test-framework-hunit
    , test-framework-quickcheck2

benchmark bench-small
    type: exitcode-stdio-1.0
    main-is: BenchSmall.hs
    other-modules: FDSSpec
    ghc-options: -rtsopts -fprof-auto
    -- benchmark-options: --output=benchmark.html
    build-depends: base
        , namelist-parser
        , containers
        , criterion
    hs-source-dirs: bench, test

benchmark bench-big
    type: exitcode-stdio-1.0
    main-is: BenchBig.hs
    other-modules: FDSSpec
    ghc-options: -rtsopts -fprof-auto
    -- benchmark-options: --output=benchmark.html
    build-depends: base
        , namelist-parser
        , containers
        , criterion
        , time
    hs-source-dirs: bench, test